# poly-fy

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  glad.c  main.cc
include/gl_helper/: framebuffer.h  index_buffer.h  shader.h  storage_buffer.h  texture.h  vertex_array.h  vertex_buffer.h
include/glad/: glad.h
include/poly_fy/: framebuffer.h  storage_buffer.h  vertex_buffer.h
include/polygons/: polygon.h
src/: CMakeLists.txt  main.cc  polygon.cc
src/gl_helper/: CMakeLists.txt  framebuffer.cc  shader.cc  texture.cc
src/polygons/: CMakeLists.txt  polygon.cc
src/shaders/: average.comp  base.vert  diff.frag  poly.comp  poly.frag  poly.vert  polygon.comp  polygon.frag  polygon.vert  quad.frag  quad.vert
